--- a/exercicio03/index.html
+++ b/exercicio03/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Verificar se um elemento possui uma classe e alterar sua cor</h1>
 
-    <div class="quadrado"></div>
+    <div class="quadrado" onclick="verificarCor()"></div>
 
     <script src="index.js"></script>
 </body>
