alterado o codigo para resolucao do ex04 de js intermediario

--- a/exercicio04/index.html
+++ b/exercicio04/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Validando o preenchimento das informações de um input</h1>
 
-    <input type="text" class="inputs">
-    <input type="text" class="inputs">
+    <input type="text" class="input-text">
+    <input type="text" class="input-text">
 
     <script src="index.js"></script>
 </body>
