formatando o html e iniciando o css

--- a/exercicio05/index.html
+++ b/exercicio05/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider de imagens - JS intermediario</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <main>
+        <div class="container1">
+            <div class="setaEsquerda"></div>
+            <section>
+                <div class="box">
+                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+
+                    <p class="paragrafo-imagem1">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.
+                    </p>
+                    <p class="saiba"><strong>Saiba mais</strong></p>
+                </div>
+            </section>
+            <div class="setaDireita"></div>
+        </div>
+
+    </main>
     <script src="index.js"></script>
 </body>
 </ht
