corrigido body e posicionamento background

--- a/exercicio05/index.html
+++ b/exercicio05/index.html
@@ -18,7 +18,7 @@
                     <p class="paragrafo-imagem1">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.
                     </p>
-                    <p class="saiba"><strong>Saiba mais</strong></p>
+                    <a href="#" class="saiba"><strong>Saiba mais</strong></a>
                 </div>
             </section>
             <div class="setaDireita"></div>
