--- a/exercicio05/index.html
+++ b/exercicio05/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <div class="container1">
+        <div class="container slide01">
             <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt=""></a></div>
             <section>
                 <div class="box">
@@ -19,7 +19,7 @@
                     <p class="paragrafo-imagem1">
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     </p>
-                    <a href="#" class="saiba"><strong>Saiba mais</strong></a>
+                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
                 </div>
             </section>
             <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
