--- a/exercicio05/index.html
+++ b/exercicio05/index.html
@@ -11,6 +11,48 @@
 <body>
     <main>
         <div class="container slide01">
+            <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt="" onclick="mudarSlide()"></a></div>
+            <section>
+                <div class="box">
+                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+
+                    <p class="paragrafo-imagem1">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
+                </div>
+            </section>
+            <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
+        </div>
+        <div class="container slide02">
+            <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt=""></a></div>
+            <section>
+                <div class="box">
+                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+
+                    <p class="paragrafo-imagem1">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
+                </div>
+            </section>
+            <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
+        </div>
+        <div class="container slide03">
+            <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt=""></a></div>
+            <section>
+                <div class="box">
+                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+
+                    <p class="paragrafo-imagem1">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
+                </div>
+            </section>
+            <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
+        </div>
+        <div class="container slide04">
             <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt=""></a></div>
             <section>
                 <div class="box">
