--- a/exercicio05/index.html
+++ b/exercicio05/index.html
@@ -3,71 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slider de imagens - JS intermediario</title>
+    <title>Exericio 05 JS Intermediario</title>
 
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <div class="container slide01">
-            <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt="" onclick="mudarSlide()"></a></div>
-            <section>
-                <div class="box">
-                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+    <div class="imagens-slider">
+        <a href="#" id="seta-voltar" class="seta-voltar opacidade">
+            <img class="imagem-seta" src="./src/imagens/seta-esquerda.png" alt="seta voltar">
+        </a>
 
-                    <p class="paragrafo-imagem1">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    </p>
-                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
-                </div>
-            </section>
-            <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
+        <div class="slide slide-rosa mostrar">
+            <div class="conteudo">
+                <h2 class="titulo">Titulo Imagem 1</h2>
+                <p class="texto">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque incidunt rerum labore eaque cum, illum mollitia! Rem reiciendis repudiandae, ea, molestias praesentium excepturi pariatur, a eos optio amet nam sapiente?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae rem iste ad aperiam ab, quasi reiciendis aut cumque cum suscipit iusto aspernatur commodi exercitationem! Recusandae voluptatibus dolorem minus rerum quibusdam.
+                </p>
+
+                <a href="#" class="botao rosa">Saiba mais</a>
+            </div>
         </div>
-        <div class="container slide02">
-            <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt=""></a></div>
-            <section>
-                <div class="box">
-                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+        <div class="slide slide-verde">
+            <div class="conteudo">
+                <h2 class="titulo">Titulo Imagem 2</h2>
+                <p class="texto">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque incidunt rerum labore eaque cum, illum mollitia! Rem reiciendis repudiandae, ea, molestias praesentium excepturi pariatur, a eos optio amet nam sapiente?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae rem iste ad aperiam ab, quasi reiciendis aut cumque cum suscipit iusto aspernatur commodi exercitationem! Recusandae voluptatibus dolorem minus rerum quibusdam.
+                </p>
 
-                    <p class="paragrafo-imagem1">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    </p>
-                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
-                </div>
-            </section>
-            <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
+                <a href="#" class="botao verde">Saiba mais</a>
+            </div>
         </div>
-        <div class="container slide03">
-            <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt=""></a></div>
-            <section>
-                <div class="box">
-                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+        <div class="slide slide-laranja">
+            <div class="conteudo">
+                <h2 class="titulo">Titulo Imagem 3</h2>
+                <p class="texto">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque incidunt rerum labore eaque cum, illum mollitia! Rem reiciendis repudiandae, ea, molestias praesentium excepturi pariatur, a eos optio amet nam sapiente?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae rem iste ad aperiam ab, quasi reiciendis aut cumque cum suscipit iusto aspernatur commodi exercitationem! Recusandae voluptatibus dolorem minus rerum quibusdam.
+                </p>
 
-                    <p class="paragrafo-imagem1">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    </p>
-                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
-                </div>
-            </section>
-            <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
+                <a href="#" class="botao laranja">Saiba mais</a>
+            </div>
         </div>
-        <div class="container slide04">
-            <div class="setaEsquerda"><a href="#"><img src="./src/img/slide01/seta-esquerda.png" alt=""></a></div>
-            <section>
-                <div class="box">
-                    <h1 class="titulo-imagem1">Titulo imagem 1</h1>
+        <div class="slide slide-azul">
+            <div class="conteudo">
+                <h2 class="titulo">Titulo Imagem 4</h2>
+                <p class="texto">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque incidunt rerum labore eaque cum, illum mollitia! Rem reiciendis repudiandae, ea, molestias praesentium excepturi pariatur, a eos optio amet nam sapiente?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae rem iste ad aperiam ab, quasi reiciendis aut cumque cum suscipit iusto aspernatur commodi exercitationem! Recusandae voluptatibus dolorem minus rerum quibusdam.
+                </p>
 
-                    <p class="paragrafo-imagem1">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias ad architecto labore placeat, itaque saepe non amet voluptatibus reprehenderit libero, cupiditate debitis dolorem quaerat neque necessitatibus facere voluptates rem eaque.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    </p>
-                    <a href="#" class="saiba1"><strong>Saiba mais</strong></a>
-                </div>
-            </section>
-            <div class="setaDireita"><a href="#"><img src="./src/img/slide01/seta-direita.png" alt=""></a></div>
+                <a href="#" class="botao azul">Saiba mais</a>
+            </div>
         </div>
 
-    </main>
-    <script src="index.js"></script>
+        <a href="#" id="seta-avancar" class="seta-avancar opacidade">
+            <img class="imagem-seta" src="./src/imagens/seta-direita.png" alt="seta avancar">
+        </a>
+    </div>
+
 </body>
-</ht
+</html>
